<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/trendingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".home.all_books.AllBooksFragment">

            <TextView
                style="@style/style_text.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/swipe_to_refresh" />

            <TextView
                style="@style/style_text.24_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_books" />

            <ProgressBar
                android:id="@+id/booksLoader"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrendingBooks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                style="@style/style_text.24_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_authors" />

            <ProgressBar
                android:id="@+id/authorsLoader"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrendingAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="-16dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                style="@style/style_text.24_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_genres" />

            <ProgressBar
                android:id="@+id/genresLoader"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrendingGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="-16dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



